--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-  <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/estilos.css">
   <link rel="stylesheet" href="./fonts/style.css">
+  <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
 
 </head>
 <body>
